--- a/lab.cqrs.discussionmaker/lab.cqrs.discussionmaker.csproj
+++ b/lab.cqrs.discussionmaker/lab.cqrs.discussionmaker.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DB604EBF-08A6-4036-9808-F0D4D361229A}</ProjectGuid>
+    <ProjectGuid>{FAE72CBC-6339-47A0-A4D3-E1EAA12B60C9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>lab.cqrs.discussionmaker.infrastructure</RootNamespace>
-    <AssemblyName>lab.cqrs.discussionmaker.infrastructure</AssemblyName>
+    <RootNamespace>lab.cqrs.discussionmaker</RootNamespace>
+    <AssemblyName>lab.cqrs.discussionmaker</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,20 +40,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AggregateRoot.cs" />
-    <Compile Include="EventBus\FakeBus.cs" />
-    <Compile Include="EventBus\ICommandSender.cs" />
-    <Compile Include="EventBus\IEventPublisher.cs" />
-    <Compile Include="EventStore\IEventStore.cs" />
-    <Compile Include="EventStore\MemoryEventStore.cs" />
-    <Compile Include="Exceptions\AggregateNotFoundException.cs" />
-    <Compile Include="Exceptions\ConcurrencyException.cs" />
-    <Compile Include="Extensions\PrivateReflectionDynamicObjectExtensions.cs" />
-    <Compile Include="IRepository.cs" />
-    <Compile Include="Message\Command.cs" />
-    <Compile Include="Message\Event.cs" />
-    <Compile Include="Message\IEvent.cs" />
+    <Compile Include="CommandHandlers\DiscussionCommandHandlers.cs" />
+    <Compile Include="Commands\Command.cs" />
+    <Compile Include="Commands\CreateDiscussion.cs" />
+    <Compile Include="Domain\Discussion.cs" />
+    <Compile Include="Domain\DiscussionSignature.cs" />
+    <Compile Include="Events\DiscussionCreated.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Repository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Messages\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\lab.cqrs.discussionmaker.infrastructure\lab.cqrs.discussionmaker.infrastructure.csproj">
+      <Project>{db604ebf-08a6-4036-9808-f0d4d361229a}</Project>
+      <Name>lab.cqrs.discussionmaker.infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
